# ARES_metaphone

./: .gitignore  ARES_DN_PHON_001.md  CHANGES_phase2.md  CURATION_HOWTO.md  README.md  altspell_gen.py  main.py  pronounce_seg.py  pyproject.toml  targets.txt
.github/workflows/: test.yml
ares-sim/: README.md  pyproject.toml  requirements.txt  run_poc.py
ares-sim/scenarios/: poc_room.yaml
ares-sim/src/ares_sim/: beamform_eval.py  behaviour_model.py  mic_model.py  optimise.py  propagation.py  room_model.py
ares-sim/tests/: test_modules.py
data/: CURATION_HOWTO.md  candidates.txt  ctcws_draft.txt  curation_report.txt  curation_report_annotated.txt  targets_220626.txt
docs/: CURATION_HOWTO.md  README.md  altspell_gen.md  pronounce_seg.md  tests.md
results/: targets_20260610_072656_curation_report.txt  targets_220626_20260622_084604_curation_report.txt
tests/: test_altspell_gen.py  test_pronounce_seg.py
