[project]
name = "ares-metaphone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "levenshtein>=0.27.3",
    "metaphone>=0.6",
]

[project.optional-dependencies]
freq = ["wordfreq>=3.0"]

[dependency-groups]
dev = ["pytest>=8.0"]
