[project]
name = "ares-sim"
version = "0.1.0"
description = "ARES Capture Simulation — acoustic placement PoC (ARES-SIM-001)"
requires-python = ">=3.12"

dependencies = [
    "pyroomacoustics>=0.10.1",
    "numpy>=2.4",
    "scipy>=1.17",
    "matplotlib>=3.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
